--- a/css/style.css
+++ b/css/style.css
@@ -11,8 +11,8 @@
 
 * {
   box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+  padding: -10px;
+  margin: 0px;
 }
 
 body {
@@ -307,16 +307,16 @@ a#navbar__logo {
   color: #000000;
 }
 
-.fa-facebook:hover {
-  color: #1773EA;
+.fa-linkedin:hover {
+  color: #000000;
 }
 
-.fa-instagram:hover {
-  color: #B32E87;
+.fa-address-card:hover {
+  color: #000000;
 }
 
-.fa-twitter:hover {
-  color: #1C9CEA;
+.fa-envelope:hover {
+  color: #000000;
 }
 
 /* Animations */
@@ -367,7 +367,7 @@ a#navbar__logo {
 }
 
 /* Tablets and under */
-@media (max-width: 768px) {
+@media (max-width: 900px) {
   .grid,
   .showcase .grid,
   .stats .grid,
@@ -416,13 +416,14 @@ a#navbar__logo {
   .features-main .grid > *:nth-child(2) {
     grid-column: 1;
   }
+
 }
 
 
 
 
 /* Mobile */
-@media (max-width: 500px) {
+@media (max-width: 600px) {
   .navbar {
     height: 110px;
   }
@@ -433,7 +434,10 @@ a#navbar__logo {
 
   .navbar ul {
     padding: 10px;
+
     background-color: rgba(0, 0, 0, 0.1);
+    width: 100%;
+    align-items: center;
   }
   
   .showcase-form {
