--- a/css/utilities.css
+++ b/css/utilities.css
@@ -155,6 +155,28 @@
   height: 100%;
 }
 
+.gridFoot {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 10px;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  font-weight: bold;
+}
+
+@media (max-width: 800px) {
+.gridFoot {
+  display: flex;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 10px;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  font-weight: bold;
+}
+}
+
 .grid-3 {
   grid-template-columns: repeat(3, 1fr);
 }
