--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@ pre {
 }
 
 a#navbar__logo {
-  color: #000000;
+  color: #ffffff;
   font-weight: bold;
 }
 
@@ -89,6 +89,8 @@ a#navbar__logo {
 
 .mainimg {
   margin-right: 4px;
+   -webkit-filter: invert(1);
+   filter: invert(1);
 }
 
 .navbar ul a:hover {
@@ -129,7 +131,7 @@ a#navbar__logo {
 }
 
 .showcase-text {
-  animation: slideInFromLeft 1s ease-in;
+  animation: slideInFromLeft 1.3s cubic-bezier(0.42, 0, 0.58, 1);
 }
 
 .fa-github {
@@ -151,7 +153,7 @@ a#navbar__logo {
   padding: 40px;
   z-index: 100;
   justify-self: flex-end;
-  animation: slideInFromRight 1s ease-in;
+  animation: slideInFromRight 1.3s cubic-bezier(0.42, 0, 0.58, 1);
 }
 
 .showcase-form .form-control {
@@ -201,7 +203,7 @@ a#navbar__logo {
 /* Stats */
 .stats {
   padding-top: 100px;
-  animation: slideInFromBottom 1s ease-in;
+  animation: slideInFromBottom 1.3s cubic-bezier(0.42, 0, 0.58, 1);
 }
 
 .stats-heading {
@@ -309,19 +311,19 @@ a#navbar__logo {
   margin: 0 10px;
 }
 
-.fa-github:hover {
+.social .fa-github:hover {
   color: #000000;
 }
 
-.fa-linkedin:hover {
+.social .fa-linkedin:hover {
   color: #000000;
 }
 
-.fa-address-card:hover {
+.social .fa-address-card:hover {
   color: #000000;
 }
 
-.fa-envelope:hover {
+.social .fa-envelope:hover {
   color: #000000;
 }
 
@@ -365,6 +367,21 @@ a#navbar__logo {
     transform: translateX(0);
   }
 }
+
+/* Initial state: hidden and transparent */
+.fade-in {
+  opacity: 0;
+  transform: translateY(20px);
+  transition: opacity 1s ease-out, transform 1s ease-out;
+}
+
+/* When visible */
+.fade-in.show {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+
 @media (max-width: 1000px){
 
   .showcase-form{
@@ -392,13 +409,13 @@ a#navbar__logo {
   .showcase-text {
     text-align: center;
     margin-top: 40px;
-    animation: slideInFromTop 1s ease-in;
+    animation: slideInFromTop 1.3s cubic-bezier(0.42, 0, 0.58, 1);
   }
 
   .showcase-form {
     justify-self: center;
     margin: auto;
-    animation: slideInFromBottom 1s ease-in;
+    animation: slideInFromBottom 1.3s cubic-bezier(0.42, 0, 0.58, 1);
   }
 
   .cli .grid > *:first-child {
@@ -431,7 +448,7 @@ a#navbar__logo {
 /* Mobile */
 @media (max-width: 600px) {
   .navbar {
-    height: 110px;
+    height: 120px;
   }
 
   .navbar .flex {
@@ -440,7 +457,8 @@ a#navbar__logo {
 
   .navbar ul {
     padding: 10px;
-
+    padding-top: 12px;
+    padding-bottom: 12px;
     background-color: rgba(0, 0, 0, 0.1);
     width: 100%;
     align-items: center;
