--- a/css/style.css
+++ b/css/style.css
@@ -462,7 +462,7 @@ a#navbar__logo {
 .fade-out {
   opacity: 1;
   transform: translateY(20px);
-  transition: opacity 1s ease-out, transform 1s ease-out;
+  transition: opacity 2s ease-out, transform 2s ease-out;
 }
 
 .fade-out.hide {
@@ -485,7 +485,7 @@ a#navbar__logo {
 /* Tablets and under */
 @media (max-width: 900px) {
   .mouse-icon {
-    top: 90%;
+    top: 85%;
   }
   .mouse-icon .wheel {
     animation-name: rise;
@@ -583,6 +583,9 @@ a#navbar__logo {
     width: 300px;
   }
 
+  .mouse-icon {
+    top: 85%;
+  }
 }
 
 
