--- a/css/style.css
+++ b/css/style.css
@@ -459,18 +459,18 @@ a#navbar__logo {
 .fade-in {
   opacity: 0;
   transform: translateY(0px);
-  transition: opacity 1s ease-out, transform 1s ease-out;
+  transition: opacity 1.3s ease-out, transform 1.3s ease-out;
 }
 
 .fade-in.show {
   opacity: 1;
-  transform: translateY(0);
+  transform: translateY(5);
 }
 
 .fade-out {
   opacity: 1;
   transform: translateY(20px);
-  transition: opacity 1.1s ease-out, transform 1.1s ease-out;
+  transition: opacity .8s ease-out, transform .8s ease-out;
 }
 
 .fade-out.hide {
