--- a/nixwsldoc/css/style.css
+++ b/nixwsldoc/css/style.css
@@ -104,3 +104,27 @@ body {
 .fa-home {
   margin-right: 4px;
 }
+
+.sub-menu {
+    display: block;
+}
+
+.search-container {
+    display: flex;
+    background-color: #004080;
+    border: 1px solid #004080;
+}
+.search-input {
+    padding: 10px;
+    border: 2px solid #4c00ff;
+    border-radius: 10px;
+    width: 300px;
+    font-size: 16px;
+    transition: border-color 0.3s;
+    background-color: lightblue;
+    outline: none; /* Remove outline */
+}
+.search-input:focus {
+    border-color: #1976D2; /* Darker blue on focus */
+    box-shadow: 0 0 5px rgba(25, 118, 210, 0.5); /* Optional shadow effect */
+}
